#11344 model synchronization between api and client
