# public/definitions/swagger.yaml
@@ -1,4 +1,3 @@
-# TODO: tags
 swagger: '2.0'
 info:
   title: Changemaker API
@@ -8,6 +7,8 @@ info:
 schemes:
   - https
 # will be prefixed to all paths
+# TODO use dynamic host, or update swagger-test to be host-independent
+host: http://localhost:3000
 basePath: /api
 produces:
   - application/json
@@ -29,7 +30,7 @@ paths:
             type: array
             items:
               $ref: '#/definitions/Changemaker'
-        default:
+        500:
           description: Unexpected error
           schema:
             $ref: '#/definitions/Error'
@@ -51,7 +52,7 @@ paths:
           headers:
             Location:
               description: The location of the created Changemaker
-        default:
+        500:
           description: Unexpected error
           schema:
             $ref: '#/definitions/Error'
@@ -118,7 +119,7 @@ paths:
             type: array
             items:
               $ref: '#/definitions/Patron'
-        default:
+        500:
           description: Unexpected error
           schema:
             $ref: '#/definitions/Error'
@@ -402,10 +403,10 @@ definitions:
       id:
         type: integer
         description: Unique identifier.
-      first_name:
+      firstName:
         type: string
         description: First name of the User
-      last_name:
+      lastName:
         type: string
         description: Last name of the User
       email:
@@ -420,7 +421,7 @@ definitions:
       isBlocked:
         type: boolean
         description: Is blocked
-      picture_location:
+      pictureLocation:
         type: string
         description: Image URL of the Changemaker
   Changemaker:
